@@ -1,3 +1,8 @@
+04/03/2021:
+	- Minor logging changes to TileManager class to allow improve logging with very detailed logging now moved into
+	  higher loglevel.
+
+
 01/03/2012:
 	- Modified JPEGCompressor::Finish() class to calculate data size before destroying compression structure.
 	  Avoids complaints when using address-sanitizer compliation flag.
